tech-fes v1 の アニメーションを参考にブラッシュアップ

--- a/pixiv-tech-lp/css/style.css
+++ b/pixiv-tech-lp/css/style.css
@@ -6,6 +6,14 @@
   bottom: 0;
 }
 
+.blurlogo--wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: 1.42s ease-in-out 0s 1 normal none running logoTransform;
+}
+
 [class^="logo--"] {
   display: block;
   position: absolute;
@@ -15,6 +23,11 @@
   transform: translate(-50%, -50%);
   /* アニメーション */
   /* animation: fadeInOut 0.5s ease-in-out 0.2s both; */
+}
+
+.logo--clear {
+  opacity: 0;
+  animation: 0.5s ease-in-out 1.42s 1 reverse both running fadeOut;
 }
 
 .logo--weak-blur {
@@ -45,6 +58,16 @@
   }
   to {
     opacity: 0;
+  }
+}
+
+@keyframes logoTransform {
+  from,
+  to {
+    transform: translate(calc(-50% + -2.4px), calc(-50% + -2.4px));
+  }
+  50% {
+    transform: translate(calc(-50% + 2.4px), calc(-50% + 2.4px));
   }
 }
 
