--- a/pixiv-tech-lp/css/style.css
+++ b/pixiv-tech-lp/css/style.css
@@ -4,14 +4,21 @@
   left: 0;
   right: 0;
   bottom: 0;
+
+  background: linear-gradient(
+    64deg,
+    rgba(92, 186, 82, 0.9),
+    rgba(179, 100, 166, 0.9)
+  );
 }
 
-.blurlogo--wrapper {
+.effect--logo-wrapper {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  animation: 1.42s ease-in-out 0s 1 normal none running logoTransform;
+  animation: 1.8s ease-in-out 0s 1 normal none running logoTransform;
+  width: calc(100% - 200px);
 }
 
 [class^="logo--"] {
@@ -19,37 +26,30 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 480px;
+  /* width: 480px; */
+  width: 100%;
   transform: translate(-50%, -50%);
-  /* アニメーション */
-  /* animation: fadeInOut 0.5s ease-in-out 0.2s both; */
 }
 
 .logo--clear {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: calc(100% - 200px);
   opacity: 0;
-  animation: 0.5s ease-in-out 1.42s 1 reverse both running fadeOut;
+  animation: 0.5s ease-in-out 1.5s 1 reverse both running fadeOut;
 }
 
 .logo--weak-blur {
   filter: blur(4px);
-  /* 始点と終点を反転 */
-  /* animation-direction: reverse; */
   animation: 0.5s ease-in-out 0s 4 alternate-reverse forwards running fadeOut;
 }
 
 .logo--strong-blur {
   filter: blur(15px);
   animation: 0.5s ease-in-out 0s 3 alternate forwards running fadeOut;
-}
-
-@keyframes fadeInOut {
-  from,
-  to {
-    opacity: 0;
-  }
-  50% {
-    opacity: 1;
-  }
 }
 
 @keyframes fadeOut {
@@ -64,41 +64,42 @@
 @keyframes logoTransform {
   from,
   to {
-    transform: translate(calc(-50% + -2.4px), calc(-50% + -2.4px));
+    transform: translate(calc(-50% + -3px), calc(-50% + -3px));
   }
   50% {
-    transform: translate(calc(-50% + 2.4px), calc(-50% + 2.4px));
+    transform: translate(calc(-50% + 3px), calc(-50% + 3px));
   }
 }
 
 [class^="eye--"] {
   position: absolute;
-  /* top: 0; */
   left: 0;
   width: 100%;
   height: calc(50% + 120px);
 }
 
 .eye--top {
+  /* background-color: orange; */
   top: 0;
   background: linear-gradient(to bottom, black calc(100% - 120px), transparent);
   /* アニメーション */
   animation: eyeTop 0.6s cubic-bezier(0, 0, 0.11, 0.99) 0.2s forwards,
     eyeTop 0.22s cubic-bezier(0, 0, 0.11, 0.99) 1.2s reverse forwards,
-    eyeTop 0.22s cubic-bezier(0, 0, 0.11, 0.99) 1.42s forwards,
-    eyeTop 0.38s cubic-bezier(0, 0, 0.11, 0.99) 6.2s reverse forwards,
-    eyeTop 0.5s cubic-bezier(0, 0, 0.11, 0.99) 6.58s forwards;
+    eyeTop 0.22s cubic-bezier(0, 0, 0.11, 0.99) 1.5s forwards,
+    eyeTop 0.38s cubic-bezier(0, 0, 0.11, 0.99) 3.2s reverse forwards,
+    eyeTop 0.5s cubic-bezier(0, 0, 0.11, 0.99) 3.58s forwards;
 }
 
 .eye--bottom {
+  /* background-color: red; */
   bottom: 0;
   background: linear-gradient(to top, black calc(100% - 120px), transparent);
   /* アニメーション */
   animation: eyeBottom 0.6s cubic-bezier(0, 0, 0.11, 0.99) 0.2s forwards,
     eyeBottom 0.22s cubic-bezier(0, 0, 0.11, 0.99) 1.2s reverse forwards,
-    eyeBottom 0.22s cubic-bezier(0, 0, 0.11, 0.99) 1.42s forwards,
-    eyeBottom 0.38s cubic-bezier(0, 0, 0.11, 0.99) 6.2s reverse forwards,
-    eyeBottom 0.5s cubic-bezier(0, 0, 0.11, 0.99) 6.58s forwards;
+    eyeBottom 0.22s cubic-bezier(0, 0, 0.11, 0.99) 1.5s forwards,
+    eyeBottom 0.38s cubic-bezier(0, 0, 0.11, 0.99) 3.2s reverse forwards,
+    eyeBottom 0.5s cubic-bezier(0, 0, 0.11, 0.99) 3.58s forwards;
 }
 
 @keyframes eyeTop {
